# pico-template

./: CMakeLists.txt
src/: main.c
